# opendetection

./: CMakeLists.txt
cmake/: od_mandatory_dependency.cmake
common/: CMakeLists.txt
common/utils/: ODFeatureDetector2D.cpp  ODFeatureDetector2D.h
detectors/global2D/: CMakeLists.txt
detectors/global2D/annotation/: ODAnnotation.cpp  ODAnnotation.h  ODAnnotation_imageLoadWindow.h  ODAnnotation_mainWindow.h  ODAnnotator.cpp  ODAnnotator.h
detectors/global2D/detection/: ODConvClassification.cpp  ODConvClassification.h
detectors/global2D/localization/: ODSelectiveSearchBase.cpp  ODSelectiveSearchBase.h  ODSelectiveSearchModel.cpp  ODSelectiveSearchModel.h  createModel_test.h
detectors/global2D/training/: ODConvTrainer.cpp  ODConvTrainer.h  activationWindow.h  criticalWindow.h  displayWindow.h  extraWindow.h  lossWindow.h  mainWindow.h  network.cpp  network.h  node.h  normalizationWindow.h  solver.cpp  solver.h
detectors/global3D/: CMakeLists.txt
detectors/local2D/: CMakeLists.txt
detectors/local2D/detection/simple_ransac_detection/: RobustMatcher.cpp  RobustMatcher.h
doc/doxygen/tutorials_doxygen/: gsoc2016_blog_abhishek.md
examples/objectdetector/: CMakeLists.txt  od_cnn_aam_classification_python_mode.cpp  od_cnn_mnist_classification.cpp  od_cnn_mnist_train_customSolver.cpp  od_cnn_mnist_train_simple.cpp  od_cnn_network_design.cpp  od_cnn_segnet_classification_python_mode.cpp  od_image_annotator.cpp  od_localize_selective_search.cpp
examples/objectdetector/AAM_Classify/: aam.prototxt  classify.py  output.txt
examples/objectdetector/Annotation/: output.txt
examples/objectdetector/Localization_Images/: img.ppm  region_of_interests.txt
examples/objectdetector/Mnist_Classify/: lenet.prototxt  mnist.caffemodel
examples/objectdetector/Mnist_Train/: changeText.py  mnist_try1_iter_10.caffemodel  mnist_try1_iter_10.solverstate  mnist_try1_iter_5.caffemodel  mnist_try1_iter_5.solverstate  sample_prefix_iter_1.caffemodel  sample_prefix_iter_1.solverstate  sample_prefix_iter_10.caffemodel  sample_prefix_iter_10.solverstate  sample_prefix_iter_5.caffemodel  sample_prefix_iter_5.solverstate  solver1.prototxt  solverCustom1.prototxt  train.txt  train1.prototxt
examples/objectdetector/Segnet_Classify/: segnet.prototxt  test.py
